# mandelbrot_cpp

./: .gitignore  CMakeLists.txt
include/: main_window.hpp
src/: main.cpp  main_app.cpp  main_window.cpp
